// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component should render authenticated routes 1`] = `
<header
  className="navigation"
>
  <img
    alt="bird-logo"
    className="logo"
    src="white-origami-bird.png"
  />
  <div
    className="header-link"
  >
    <a
      className="header-list-item"
      href="/"
      onClick={[Function]}
    >
      Publications
    </a>
  </div>
  <div
    className="header-link"
  >
    <a
      className="header-list-item"
      href="/share-thoughts"
      onClick={[Function]}
    >
      Share Thoughts
    </a>
  </div>
  <div
    className="header-link"
  >
    <a
      className="header-list-item"
      href="/profile/1234"
      onClick={[Function]}
    >
      Profile
    </a>
  </div>
</header>
`;

exports[`Header Component should render guest routes 1`] = `
<header
  className="navigation"
>
  <img
    alt="bird-logo"
    className="logo"
    src="white-origami-bird.png"
  />
  <div
    className="header-link"
  >
    <a
      className="header-list-item"
      href="/"
      onClick={[Function]}
    >
      Publications
    </a>
  </div>
  <div
    className="header-link"
  >
    <a
      className="header-list-item"
      href="/register"
      onClick={[Function]}
    >
      Register
    </a>
  </div>
  <div
    className="header-link"
  >
    <a
      className="header-list-item"
      href="/login"
      onClick={[Function]}
    >
      Login
    </a>
  </div>
</header>
`;
